# vibe

./: .gitignore  CLAUDE.md  README.md  package.json  vibe
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
scripts/: install.ps1  install.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: files.rs  lib.rs  main.rs  pty.rs  watcher.rs
ui/: app.js  index.html  style.css
ui/view-editor/: app.js  index.html  sample.view  style.css
